--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>tsinghua.sstreaming</groupId>
     <artifactId>simulation-streaming</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
